fixed button alignment

--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -47,7 +47,7 @@ button:hover {
   display: flex;
   flex-direction: column;
   align-items: center;
-  position: relative;
+  /* position: relative; */
   margin: 3% 8% 8% 8%;
   height: 2000px;
   /* /* height: fit-content; */
@@ -89,10 +89,13 @@ label {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 10px 20px 40px 20px;
+  padding: 10px 20px 100px 20px;
   background-color: #232323;
   width: fit-content;
+  height: fit-content;
   border-radius: 2px;
+  position: relative;
+  box-sizing: border-box;
 }
 
 .form-container h1,
@@ -119,6 +122,8 @@ fieldset label {
   padding: 6px 9px 6px 9px;
   color: white;
   border-radius: 2px;
+  margin-top: 20px;
+
   /* font-weight: bold; */
 }
 
@@ -129,14 +134,23 @@ fieldset label {
 
 .demo-btn {
   position: absolute;
-  top: 260px;
-  right: 550px;
+  bottom: 30px;
+  right: 30px;
 }
 
 .submit-btn {
   position: absolute;
+  bottom: 30px;
+  left: 30px;
 }
+
 /* NAVBAR (layout.pug) */
+
+.logout {
+  position: absolute;
+  top: 30px;
+  right: 120px;
+}
 
 .nav-bar {
   display: flex;
@@ -161,7 +175,7 @@ button { */
   font-size: 20px;
   color: #464b50;
   position: absolute;
-  left: 20px;
+  left: 40px;
   top: 30px;
   /* top: 10px; */
 }
@@ -211,8 +225,8 @@ button { */
 
 #searchButton {
   position: absolute;
-  left: 325px;
-  top: 2px;
+  left: 330px;
+  top: 32px;
 }
 
 .fa-search {
@@ -234,6 +248,11 @@ button { */
   flex-direction: row;
   flex-wrap: wrap;
   padding-top: 20px;
+}
+
+.player {
+  background-color: white;
+  color: #464b50;
 }
 
 .genre_div {
@@ -270,6 +289,7 @@ button { */
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin: 40px;
 }
 
 .pod_review_container {
@@ -287,11 +307,21 @@ button { */
   width: 500px;
 }
 
+.description-div {
+  width: 300px;
+}
+
 .stars {
   width: 150px;
   text-align: center;
   display: flex;
   flex-direction: row-reverse;
+}
+
+.portions {
+  display: flex;
+  width: 100%;
+  justify-content: space-around;
 }
 
 .stars > label {
@@ -323,6 +353,7 @@ button { */
   color: #ffd700;
 }
 
+/* SPLASH */
 .splash {
   background: url("../images/pod2BigOrangeLogo.png") center no-repeat;
   border-radius: 2px;
@@ -332,8 +363,8 @@ button { */
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  position: absolute;
-  top: 0;
+  /* position: absolute; */
+  /* top: 0; */
   transition: background-color 2s, transform 4s, background-image 2s, delay 2s,
     duration 4s;
 }
@@ -359,19 +390,4 @@ button { */
 
 .hidden {
   display: none;
-}
-
-/* FOOTER */
-.footer-container {
-  width: 70%;
-}
-
-.footer {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-}
-
-.footer-img {
-  background: url("../images/listenNoteAPI.png") center no repeat;
 }
